--- a/ms.tex
+++ b/ms.tex
@@ -1,3 +1,11 @@
+% The rules:
+% I guess same as DFM because he'll complain if we don't use the 
+% character limit.
+% New sentences on each line.
+% Citation format is \citet{AuthornameYY}.
+% References go into papers.bib alphabetically, with ties broken
+% chronologically.
+
 %\documentclass[]{aastex}
 \documentclass{emulateapj}
 %\documentclass[]{emulateapj}
@@ -119,6 +127,12 @@ Street, Cambridge, MA 02138, USA}
 \section{Stellar Properties}
 \subsection{Photometry}
 
+With the exception of one star in our sample (EPIC 201912552), we do not have
+spectroscopic data with which to characterize the stellar properties. 
+Instead, we rely on photometry.
+For each system, we query the VizieR database of astronomical catalogues
+\citep{Ochsenbein00}, 
+
 
 \subsection{SpeX Spectroscopy}
 
@@ -176,7 +190,7 @@ Foundation and the Alfred P. Sloan Foundation.
 
 
 
-\bibliography{planetspapers}
+\bibliography{papers}
 
 
 
