--- a/exopapers.bib
+++ b/exopapers.bib
@@ -1163,6 +1163,20 @@ booktitle = {''The IRSA 2MASS All-Sky Point Source Catalog, NASA/IPAC Infrared S
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Cutri13,
+   author = {{Cutri}, R.~M. and {et al.}},
+    title = "{VizieR Online Data Catalog: AllWISE Data Release (Cutri+ 2013)}",
+  journal = {VizieR Online Data Catalog},
+ keywords = {WISE},
+     year = 2013,
+    month = nov,
+   volume = 2328,
+    pages = {0},
+   adsurl = {http://adsabs.harvard.edu/abs/2013yCat.2328....0C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 @ARTICLE{Dawson12a,
    author = {{Dawson}, R.~I. and {Johnson}, J.~A.},
@@ -1503,7 +1517,7 @@ archivePrefix = "arXiv",
 }
 
 
-@ARTICLE{Fabrycky12a,
+@ARTICLE{Fabrycky12,
    author = {{Fabrycky}, D.~C. and {Ford}, E.~B. and {Steffen}, J.~H. and 
 	{Rowe}, J.~F. and {Carter}, J.~A. and {Moorhead}, A.~V. and 
 	{Batalha}, N.~M. and {Borucki}, W.~J. and {Bryson}, S. and {Buchhave}, L.~A. and 
@@ -3824,8 +3838,7 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
-@ARTICLE{Ochsenbein00,
+@ARTICLE{Ochseinbein00,
    author = {{Ochsenbein}, F. and {Bauer}, P. and {Marcout}, J.},
     title = "{The VizieR database of astronomical catalogues}",
   journal = {\aaps},
@@ -3836,7 +3849,7 @@ archivePrefix = "arXiv",
    volume = 143,
     pages = {23-32},
       doi = {10.1051/aas:2000169},
-   adsurl = {http://cdsads.u-strasbg.fr/abs/2000A%26AS..143...23O},
+   adsurl = {http://adsabs.harvard.edu/abs/2000A%26AS..143...23O},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -5040,6 +5053,21 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...742...38Y},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Zacharias12,
+   author = {{Zacharias}, N. and {Finch}, C.~T. and {Girard}, T.~M. and {Henden}, A. and 
+	{Bartlett}, J.~L. and {Monet}, D.~G. and {Zacharias}, M.~I.},
+    title = "{VizieR Online Data Catalog: UCAC4 Catalogue (Zacharias+, 2012)}",
+  journal = {VizieR Online Data Catalog},
+ keywords = {Surveys, Positional data, Proper motions},
+     year = 2012,
+    month = jul,
+   volume = 1322,
+    pages = {0},
+   adsurl = {http://adsabs.harvard.edu/abs/2012yCat.1322....0Z},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{Zakhozhaj02,
    author = {{Zakhozhaj}, V.~A.},
