Updates from ShareLaTeX

--- a/exopapers.bib
+++ b/exopapers.bib
@@ -3584,6 +3584,27 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Montet15,
+   author = {{Montet}, B.~T. and {Johnson}, J.~A. and {Muirhead}, P.~S. and 
+	{Villar}, A. and {Vassallo}, C. and {Baranec}, C. and {Law}, N.~M. and 
+	{Riddle}, R. and {Marcy}, G.~W. and {Howard}, A.~W. and {Isaacson}, H.
+	},
+    title = "{Characterizing the Cool KOIs. VII. Refined Physical Properties of the Transiting Brown Dwarf LHS 6343 C}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1411.4047},
+ primaryClass = "astro-ph.SR",
+ keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+     year = 2015,
+    month = feb,
+   volume = 800,
+      eid = {134},
+    pages = {134},
+      doi = {10.1088/0004-637X/800/2/134},
+   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1411.4047M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{Moore12,
    author = {{Moore}, A. and {Hasan}, I. and {Quillen}, A.},
@@ -3818,6 +3839,26 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...551A..36N},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Newton15,
+   author = {{Newton}, E.~R. and {Charbonneau}, D. and {Irwin}, J. and {Mann}, A.~W.
+	},
+    title = "{An Empirical Calibration to Estimate Cool Dwarf Fundamental Parameters from H-band Spectra}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1412.2758},
+ primaryClass = "astro-ph.SR",
+ keywords = {stars: atmospheres, binaries: general, stars: fundamental parameters, stars: low-mass },
+     year = 2015,
+    month = feb,
+   volume = 800,
+      eid = {85},
+    pages = {85},
+      doi = {10.1088/0004-637X/800/2/85},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...800...85N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 
