--- a/ms.tex
+++ b/ms.tex
@@ -172,6 +172,12 @@ to calculate a more accurate assessment of our true uncertainties than
 relying on one model alone.
 
 
+The Padova models consistently produce radii which are \btmtodo{VALUE\%} 
+larger than those predicted by the Dartmouth models. 
+The Dartmouth models have been found to underestimate the radii of 
+K and M dwarfs by about 15\% when compared to other methods
+\citep{Newton15, Montet15}. 
+
 \subsection{SpeX Spectroscopy}
 
 
