--- a/ms.tex
+++ b/ms.tex
@@ -83,7 +83,7 @@
 \begin{document}
 \title{(Working Title) Properties of the \KT\ Campaign 1 Planets, 
 False Positive Probabilities, and Confirmation of $N$ Systems. You 
-Were Warned it's a Working Title.}
+Were Warned: it's a Working Title.}
 
 \author{
 % The Heavy Lifters
@@ -197,40 +197,40 @@ The target was observed at two positions along the slit to subsequently subtract
 the sky background. Eight spectra were taking following this pattern, which provided 
 a final S/N of $>150$ per resolving element. 
 The spectrum was flat fielded, extracted, wavelength calibrated, and stacked 
-using the \textit{SpeXTool} package \citep{Cushing:2004}. 
+using the \textit{SpeXTool} package \citep{Cushing04}. 
 An A0V-type star was observed immediately after 
 the target, which was used to create a telluric correction using the 
-\textit{xtellcor} package \citep{Vacca:2003}.
+\textit{xtellcor} package \citep{Vacca03}.
 
 An optical spectrum was obtained using the SuperNova Integral Field Spectrograph
-\citep[SNIFS,][]{2002SPIE.4836...61A,Lantz:2004} on the University of Hawai'i 
+\citep[SNIFS,][]{Aldering02,Lantz04} on the University of Hawai'i 
 2.2m telescope on the night of January 30 2015. 
 SNIFS provides simultaneous coverage from 3200\AA--9700\,AA\ at a resolution 
 of $\simeq1000$. Final S/N of the spectrum was $>100$ pre resolving element 
 in the red ($\sim6000$\AA). 
 Details of the SNIFS reduction, including dark, bias, and flat-field corrections,
 cleaning the data of bad pixels and cosmic rays, and extraction of the 
-one-dimensional spectrum are  described in \citet{Bacon:2001} and 
-\citet{Aldering:2006}. 
-Flux calibration was performed using a separate pipeline described in \citet{Mann2015}. 
+one-dimensional spectrum are described in \citet{Bacon01} and 
+\citet{Aldering06}. 
+Flux calibration was performed using a separate pipeline described in \citet{Mann15}. 
 
 \teff\ was calculated by comparing our optical spectra with the CFIST
 suite\footnote{http://phoenix.ens-lyon.fr/Grids/BT-Settl/CIFIST2011/} of the BT-SETTL
-version of the PHOENIX atmosphere models \citep{Allard:2013}, which gave a temperature
+version of the PHOENIX atmosphere models \citep{Allard13}, which gave a temperature
 of 3503 $\pm$ 60\,K. 
-More details of this procedure are given in \citet{2013ApJ...779..188M} and
-\citet{2014MNRAS.443.2561G}. 
+More details of this procedure are given in \citet{Mann14} and
+\citet{Gaidos14}. 
 This method was used because it is known to accurately reproduce empirical 
-\teff\ values from long-baseline optical interferometry \citet{Boyajian2012}. 
+\teff\ values from long-baseline optical interferometry \citet{Boyajian12}. 
 
-Metallcity was determined using the procedures from \citet{Mann2013a}. 
-\citet{Mann2013a} provide empirical relations between atomic features and M dwarf
+Metallcity was determined using the procedures from \citet{Mann13a}, in which the
+authors provide empirical relations between atomic features and M dwarf
 metallicity, calibrated using wide binaries. 
 We adopted the weighted mean of the $H-$ and $K-$band calibrations, 
 which yielded a metallicity of 0.09$\pm$0.09.
 
 We combined the derived \teff\ and [Fe/H] values with the empirical 
-\teff-[Fe/H]-$R_*$ relation from \citet{Mann2015} to compute a radius. 
+\teff-[Fe/H]-$R_*$ relation from \citet{Mann15} to compute a radius. 
 Accounting for measurement and calibration errors in [Fe/H] and \teff\ we calculated 
 a radius 0.394$\pm0.038R_\odot$. 
 We use these parameters instead of the derived photometric properties for this target.
@@ -292,7 +292,7 @@ Foundation and the Alfred P. Sloan Foundation.
 
 
 
-\bibliography{exopapers; mannbib}
+\bibliography{exopapers}
 
 
 
