--- a/exopapers.bib
+++ b/exopapers.bib
@@ -43,6 +43,27 @@
 }
 
 
+@ARTICLE{Ahn12,
+   author = {{Ahn}, C.~P. and {Alexandroff}, R. and {Allende Prieto}, C. and 
+	{Anderson}, S.~F. and {Anderton}, T. and {Andrews}, B.~H. and 
+	{Aubourg}, {\'E}. and {Bailey}, S. and {Balbinot}, E. and {Barnes}, R. and et al.},
+    title = "{The Ninth Data Release of the Sloan Digital Sky Survey: First Spectroscopic Data from the SDSS-III Baryon Oscillation Spectroscopic Survey}",
+  journal = {\apjs},
+archivePrefix = "arXiv",
+   eprint = {1207.7137},
+ primaryClass = "astro-ph.IM",
+ keywords = {atlases, catalogs, surveys },
+     year = 2012,
+    month = dec,
+   volume = 203,
+      eid = {21},
+    pages = {21},
+      doi = {10.1088/0067-0049/203/2/21},
+   adsurl = {http://adsabs.harvard.edu/abs/2012ApJS..203...21A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @inproceedings{Aldering02,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2002SPIE.4836...61A},
