--- a/ms.tex
+++ b/ms.tex
@@ -113,6 +113,9 @@ Street, Cambridge, MA 02138, USA}
 
 \begin{abstract}
 \btmtodo{This is where the abstract will go}
+Of particular interest is EPIC 201912552, a bright (K=8.9) M2 dwarf
+hosting a \btmtodo{Radius} planet with $T_{eq} = $\btmtodo{Temp} and an 
+orbital period of 33 days.
 \end{abstract}
 
 \keywords{\btmtodo{Keywords}}
@@ -185,7 +188,6 @@ represent the true physical parameters when the WISE data is included.
 \subsection{SpeX Spectroscopy}
 \label{Spexobs}
 
-\btmtodo{Some of Mann's references aren't in his .bib file. Fix.}
 
 A near-infrared spectrum of EPIC 201912552 was obtained using the updated SpeX 
 (uSpeX) spectrograph \citep{Rayner03} on the NASA Infrared Telescope Facility 
@@ -238,9 +240,28 @@ We use these parameters instead of the derived photometric properties for this t
 \section{False Positive Analysis}
 \subsection{Adaptive Optics Imaging}
 
-\subsection{Archival Imaging}
+This is Brendan.
 
 \subsection{Known Background Stars}
+The P3K AO system has a field of view of $3.84 \times 3.84$ arcseconds.
+\btmtodo{Check with Brendan to make sure he used this mode}.
+Each \KT\ pixel is a square of $3.98 \times 3.98$ arcseconds. 
+A background eclipsing binary within a few \KT\ pixels of our target 
+stars could mimic a transit signal while evading detection by P3K.
+Such wide eclipsing binaries should appear in seeing-limited ground-based
+surveys.
+
+To investigate the possibility that such wide companions exist,
+we query the ninth data release of the Sloan Digital Sky Survey 
+\citep[SDSS DR9,][]{Ahn12}. For each target, we return
+all stars within 12\arcsec with $\Delta r < 8$ relative to each object
+of interest.
+
+
+\subsection{Archival Imaging}
+
+This is Ben.
+
 
 \subsection{TRES Radial Velocities}
 
@@ -277,9 +298,30 @@ STScI is operated by the Association of Universities for Research
 in Astronomy, Inc., under NASA contract NAS5--26555. 
 for MAST for non--HST data is provided by the NASA Office of Space 
 Science via grant NNX13AC07G and by other grants and contracts. 
+
 This paper includes data collected by the \kep\ mission. 
 Funding for the \kep\ mission is provided by the NASA Science 
 Mission directorate.
+
+This paper includes data collected by the Sloan Digital Sky Survey.
+Funding for SDSS-III has been provided by the Alfred P. Sloan Foundation,
+the Participating Institutions, the National Science Foundation, and the
+U.S. Department of Energy Office of Science. The SDSS-III web site is
+http://www.sdss3.org/.
+SDSS-III is managed by the Astrophysical Research Consortium for the
+Participating Institutions of the SDSS-III Collaboration including the
+University of Arizona, the Brazilian Participation Group, Brookhaven
+National Laboratory, Carnegie Mellon University, University of Florida,
+the French Participation Group, the German Participation Group, Harvard
+University, the Instituto de Astrofisica de Canarias, the Michigan
+State/Notre Dame/JINA Participation Group, Johns Hopkins University,
+Lawrence Berkeley National Laboratory, Max Planck Institute for
+Astrophysics, Max Planck Institute for Extraterrestrial Physics, New
+Mexico State University, New York University, Ohio State University,
+Pennsylvania State University, University of Portsmouth, Princeton
+University, the Spanish Participation Group, University of Tokyo,
+University of Utah, Vanderbilt University, University of Virginia,
+University of Washington, and Yale University.
 
 B.T.M. is supported by the National Science Foundation Graduate Research
 Fellowship under Grant No. DGE‐1144469. 
