--- a/ms.tex
+++ b/ms.tex
@@ -71,6 +71,9 @@
 \newcommand{\feh}{{[Fe/H]}~}
 \newcommand{\afe}{{[$\alpha$/Fe]}~}
 
+\newcommand{\paperip}{\citep{Foreman-Mackey15}}
+\newcommand{\paperit}{\citet{Foreman-Mackey15}}
+
 \newcommand{\is}{importance sampling}
 \newcommand{\Is}{Importance sampling}
 %\newcommand{\h2ok2}{{$\rm H_2O-K2$}}
@@ -113,7 +116,9 @@ Street, Cambridge, MA 02138, USA}
 
 \begin{abstract}
 \btmtodo{This is where the abstract will go}
-Of particular interest is EPIC 201912552, a bright (K=8.9) M2 dwarf
+Of the 36 planet candidates presented in \paperit{} we confirm 
+\btmtodo{Nconfirm} as planets and \btmtodo{NFP} as false positives
+at the \btmtodo{confidence} level. Of particular interest is EPIC 201912552, a bright (K=8.9) M2 dwarf
 hosting a \btmtodo{Radius} planet with $T_{eq} = $\btmtodo{Temp} and an 
 orbital period of 33 days.
 \end{abstract}
@@ -236,6 +241,10 @@ We combined the derived \teff\ and [Fe/H] values with the empirical
 Accounting for measurement and calibration errors in [Fe/H] and \teff\ we calculated 
 a radius 0.394$\pm0.038R_\odot$. 
 We use these parameters instead of the derived photometric properties for this target.
+
+\section{Planet Properties}
+
+This is Dan?
 
 \section{False Positive Analysis}
 \subsection{Adaptive Optics Imaging}
