--- a/exopapers.bib
+++ b/exopapers.bib
@@ -1869,6 +1869,22 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Foreman-Mackey15,
+   author = {{Foreman-Mackey}, D. and {Montet}, B.~T. and {Hogg}, D.~W. and 
+	{Morton}, T.~D. and {Wang}, D. and {Sch{\"o}lkopf}, B.},
+    title = "{A systematic search for transiting planets in the K2 data}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1502.04715},
+ primaryClass = "astro-ph.EP",
+ keywords = {Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+     year = 2015,
+    month = feb,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150204715F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 @ARTICLE{Forveille04,
    author = {{Forveille}, T. and {S{\'e}gransan}, D. and {Delorme}, P. and 
