Updates from ShareLaTeX

--- a/ms.tex
+++ b/ms.tex
@@ -349,7 +349,7 @@ This is Tim.
 
 \subsection{Some Multi (possible multi of these}
 
-\subsection{Others? Really bright ones amenable to followup?}
+\subsection{Systems Orbiting Bright Stars}
 
 \section{Results and Discussion}
 
