--- a/fpp/test.ipynb
+++ b/fpp/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:917b72685f7e0512f060c4cad43b767bfeacdeaf76b380bbb30a82beab0141ba"
+  "signature": "sha256:3095d345129d034ab03302a53706dd67979a3aa117c689181ef322ade3f3d669"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -163,7 +163,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ls samples"
+      "ls -ltr samples"
      ],
      "language": "python",
      "metadata": {},
@@ -172,15 +172,42 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "201208431.h5  201384232.h5  201505350.h5  201569483.h5  201629650.h5  201754305.h5  201929294.h5\r\n",
-        "201257461.h5  201393098.h5  201546283.h5  201577035.h5  201635569.h5  201779067.h5\r\n",
-        "201295312.h5  201403446.h5  201549860.h5  201596316.h5  201649426.h5  201828749.h5\r\n",
-        "201338508.h5  201445392.h5  201555883.h5  201613023.h5  201702477.h5  201855371.h5\r\n",
-        "201367065.h5  201465501.h5  201565013.h5  201617985.h5  201736247.h5  201912552.h5\r\n"
+        "total 54344\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:13 201208431.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:13 201257461.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:13 201295312.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 4802144 Feb 27 11:13 201338508.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 4802144 Feb 27 11:14 201367065.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201384232.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201393098.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201403446.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 4802144 Feb 27 11:14 201445392.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201465501.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 4802144 Feb 27 11:14 201505350.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201546283.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201549860.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201555883.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201565013.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201569483.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201577035.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201596316.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201613023.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201617985.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201629650.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201635569.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201649426.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201702477.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201736247.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 4802144 Feb 27 11:15 201754305.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201779067.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201828749.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201855371.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201912552.h5\r\n",
+        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201929294.h5\r\n"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
