--- a/ms.tex
+++ b/ms.tex
@@ -245,7 +245,13 @@ We use these parameters instead of the derived photometric properties for this t
 
 \section{Planet Properties}
 
-This is Dan?
+This is Dan.
+
+(Include comment here about how the planet parameters assume no dilution. 
+Except for the two that we have AO detected binaries for, probably?
+Brendan should have us flux ratios by the end of the day.
+In those cases, I suppose we need to include planet properties in both cases
+in which the transit is around either the more or less massive star.)
 
 \section{False Positive Analysis}
 \subsection{Adaptive Optics Imaging}
