--- a/fpp/test.ipynb
+++ b/fpp/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3095d345129d034ab03302a53706dd67979a3aa117c689181ef322ade3f3d669"
+  "signature": "sha256:512264b503091443f3e7e4dcb1bd1b9f3c6ceb290d4e97a39612fc5b922295f3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -252,6 +252,52 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import h5py\n",
+      "f = h5py.File('samples/201208431.h5', 'r')\n",
+      "samples = np.array(f['samples'])\n",
+      "f.close()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "samples"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 20,
+       "text": [
+        "array([[  1.05305895e-01,   1.18362161e-03,   1.59558964e+01,\n",
+        "          9.99957430e+00,   7.53961245e+00],\n",
+        "       [  1.39187101e-01,   1.54509183e-03,   3.39059649e+00,\n",
+        "          1.00058620e+01,   7.51377542e+00],\n",
+        "       [  1.49554790e-01,   1.36612071e-03,   4.83823065e+00,\n",
+        "          1.00039290e+01,   7.52140261e+00],\n",
+        "       ..., \n",
+        "       [  1.49083909e-01,   1.55577310e-03,   3.33589144e+00,\n",
+        "          1.00061481e+01,   7.51545042e+00],\n",
+        "       [  1.07292527e-01,   1.34063095e-03,   1.55026856e+01,\n",
+        "          1.00033586e+01,   7.52506007e+00],\n",
+        "       [  1.68401346e-01,   1.63286573e-03,   2.39856918e+00,\n",
+        "          1.00068100e+01,   7.51043377e+00]])"
+       ]
+      }
+     ],
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
