Archival imaging words, but not data or figures.

--- a/ms.tex
+++ b/ms.tex
@@ -258,6 +258,9 @@ in which the transit is around either the more or less massive star.)
 
 This is Brendan.
 
+
+
+
 \subsection{Known Background Stars}
 The P3K AO system has a field of view of $3.84 \times 3.84$ arcseconds.
 \btmtodo{Check with Brendan to make sure he used this mode}.
@@ -321,7 +324,33 @@ down to a limiting magnitude of $r=22.2$.
 
 \subsection{Archival Imaging}
 
-This is Ben.
+For the stars with AO nondetections, there is still the
+possibility that a background binary could be positioned
+directly behind the target star, evading detection.
+The probability is small, given the $0\farcs1$ diffraction limit
+of P200 at $2\mu$m, but nonzero.
+We can rule out the possibility of such chance alignments with 
+archival imaging data. 
+
+\btmtodo{Method}
+
+\btmtodo{Plots showing POSS observations.}
+
+For these targets, we can extend our contrast curves to zero 
+present-day orbital separation and rule out the possibility that
+these transit events are caused by background eclipsing binaries.
+By combining present-day seeing-limited photometric survey data, 
+adaptive optics imaging, and archival photometry, the only stellar companions 
+we would not detect would be those that are gravitationally bound to the target 
+star and positioned in their orbits so that their projected separation is
+smaller than the diffraction limit of the P200 telescope.
+Such an alignment would require the orbital inclination of the binary to be 
+nearly $90^\circ$ and the phase $\varpi + \theta \approx \pi/2$ or $3\pi/2$.
+While we cannot fully rule out this possibility, such an alignment is unlikely
+to occur, and highly unlikely to cause enough dilution to call the planetary
+nature of these signals into question.
+
+
 
 
 \subsection{TRES Radial Velocities}
